--- a/charts/registry/values.yaml
+++ b/charts/registry/values.yaml
@@ -1,5 +1,6 @@
 org: "deiscc"
 pull_policy: "Always"
-docker_tag: canary
+docker_tag: "canary"
+docker_registry: ""
 # limits_cpu: "100m"
 # limits_memory: "50Mi"
